Expression optimization cleanup and documentation